<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="350dp"
    android:layout_height="240dp"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="4dp"
    android:backgroundTint="@color/card_back"
    app:cardCornerRadius="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="4dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_restaurant_image"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:src="@drawable/ic_launcher_foreground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/roundedImageViewRounded_Small" />


        <TextView
            android:id="@+id/btn_state"
            android:layout_width="56dp"
            android:layout_height="22dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/btn_back_corner"
            android:fontFamily="@font/josefin_sans_bold"
            android:gravity="center"
            android:text="@string/close"
            android:textColor="@color/red"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="@+id/iv_restaurant_image"
            app:layout_constraintTop_toTopOf="@+id/iv_restaurant_image" />

        <FrameLayout
            android:id="@+id/fl_rate"
            android:layout_width="56dp"
            android:layout_height="22dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/btn_back_corner"
            app:layout_constraintBottom_toBottomOf="@+id/btn_state"
            app:layout_constraintEnd_toEndOf="@+id/iv_restaurant_image"
            app:layout_constraintTop_toTopOf="@+id/btn_state">

            <ImageView
                android:id="@+id/button_star"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="start|center"
                android:layout_marginStart="4dp"
                android:background="@null"
                android:src="@drawable/ic_star"
                app:tint="@color/yellow" />

            <TextView
                android:id="@+id/tv_rate"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="end|center"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:fontFamily="@font/josefin_sans"
                android:text="4.5" />
        </FrameLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_reviews"
            android:layout_width="80dp"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="@+id/iv_restaurant_image"
            app:layout_constraintBottom_toBottomOf="@id/tv_name"
            app:layout_constraintStart_toEndOf="@id/tv_distance"
            app:layout_constraintTop_toTopOf="@id/tv_name"
            tools:listitem="@layout/friend_item"/>

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/josefin_sans_bold"
            android:text="@string/happy_bones"
            android:textColor="@color/blue"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@id/btn_state"
            app:layout_constraintTop_toBottomOf="@+id/iv_restaurant_image" />

        <TextView
            android:id="@+id/tv_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:background="@drawable/italic_gradient_shape"
            android:fontFamily="@font/josefin_sans"
            android:paddingStart="8dp"
            android:paddingTop="4dp"
            android:paddingEnd="8dp"
            android:paddingBottom="4dp"
            android:text="@string/italian"
            android:textColor="@color/white"
            android:textSize="10dp"
            app:layout_constraintBottom_toBottomOf="@id/tv_name"
            app:layout_constraintStart_toEndOf="@id/tv_name"
            app:layout_constraintTop_toTopOf="@id/tv_name" />

        <TextView
            android:id="@+id/tv_distance"
            android:layout_width="wrap_content"
            android:layout_height="22dp"
            android:layout_marginStart="12dp"
            android:background="@drawable/btn_back_corner"
            android:backgroundTint="@color/purple"
            android:fontFamily="@font/josefin_sans"
            android:paddingStart="8dp"
            android:paddingTop="4dp"
            android:paddingEnd="8dp"
            android:paddingBottom="4dp"
            android:text="1.2 km"
            android:textColor="@color/white"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="@id/tv_name"
            app:layout_constraintStart_toEndOf="@id/tv_type"
            app:layout_constraintTop_toTopOf="@id/tv_name" />

        <TextView
            android:id="@+id/tv_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/josefin_sans"
            android:text="@string/address"
            android:textSize="10sp"
            app:layout_constraintStart_toStartOf="@id/tv_name"
            app:layout_constraintTop_toBottomOf="@id/tv_name" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>